# proteus-actuarial-library

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: development.md
